# characters

./: .gitattributes  .gitignore  pyproject.toml
.streamlit/: config.toml
configs/adversarial_skeptic_holistic_llama31/: dpo_dataset.yaml  inference_original_lima_prompt_pool_sft.yaml  inference_reddit_2000_introspection_sft.yaml  inference_reddit_2000_trl_dpo.yaml  introspection_sft.yaml  introspection_sft_data.yaml  self_interaction.yaml  self_reflection.yaml  teacher_generation_batch.yaml  trl_dpo.yaml
configs/distillation_prompt_pool/: adversarial_skeptic_lima.yaml
configs/goodness_llama31/: 01_distillation_prompt_pool.yaml  02_teacher_generation.yaml  (+12 more)
dashboard/: app.py  inference_app.py
data/: submissions.csv
scripts/: build_introspection_sft_data.py  distillation_prompt_pool.py  merge_dpo.py  modal_generate_self_interaction.py  modal_generate_self_reflection.py  modal_infer_dataset_vllm.py  modal_infer_trl_dpo.py  modal_infer_trl_dpo_vllm.py  modal_inference_vllm.py  modal_load_llama31.py  modal_student_generation_vllm.py  modal_train_introspection_sft.py  modal_train_trl_dpo.py  process_response_generation_batch.py  prompt_expansion.py  prompt_expansion_modal.py  prompt_expansion_provider.py  response_generation_batch.py  run_adversarial_skeptic_holistic_llama31.py  run_dpo.py  stress_testing_model_spec_inference.py  student_generation.py  teacher_generation.py  train_trl_dpo.py
tests/: test_dataset_inference_config.py  test_introspection_pipeline.py  test_nemo_dpo.py  test_prompt_expansion.py  test_provider_backend.py  test_response_generation.py
(+58 files in other folders)
